--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
+  "dependencies": {
+  "express": "^4.15.3"
+  },
   "devDependencies": {}
 }
