--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -91,6 +91,6 @@ stages:
               deployToSlotOrASE: true
               ResourceGroupName: 'jesumePyFuncDevOps'
               SlotName: 'staging'
-              packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+              packageForLinux: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
               enableCustomDeployment: true
               DeploymentType: 'runFromZip'
